# llm-evaluation-framework

./: .gitignore  README.md  dataset.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
llm_eval/: __init__.py  advanced_drift.py  advanced_statistics.py  agreement.py  benchmark.py  category_analysis.py  config.py  dataset.json  dimensional_analysis.py  exceptions.py  export.py  failure_analysis.py  models.py  reporting.py  scorer.py  significance.py  utils.py  validation.py
tests/: __init__.py  test_reporting.py  test_statistics.py  test_validation.py
