[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-evaluation-framework"
version = "0.1.0"
description = "Statistically rigorous LLM evaluation framework"
authors = [
  { name = "Pradeep Kumar" }
]
requires-python = ">=3.10"

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_eval*"]

[tool.mypy]
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true